--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,85 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
+      'Lucida Sans', Arial, sans-serif;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  
+  body {
+    background: linear-gradient(
+      90deg,
+      rgb(245, 35, 175) 0%,
+      rgba(100, 115, 255, 1) 100%
+    );
+    padding-top: 5rem;
   }
-  to {
-    transform: rotate(360deg);
+
+  .App{
+    height: 50%;
+    width: 50%;
+    margin: auto;
+    /* background-color: #f1c232; */
+
+
   }
-}
+
+  .App h1 {
+    color: white;
+    padding-bottom: 2rem;
+    text-align: center;
+  }
+
+  .btn{
+    font-size: 2rem;
+    font-weight: bold;
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+    padding-left: 3rem;
+    padding-right: 3rem;
+    background-color: #f1c232;
+    border-radius: 0.5rem;
+    margin-bottom: 1rem;
+    transition-duration: 0.5s;
+    transition-timing-function: ease-in-out;
+    cursor: pointer;
+    
+  }
+
+  .btn .hover\:scale-105:hover {
+    transform: scale(1.05);
+  }
+
+  .addTask_btn {
+
+  }
+
+  .outlined-basic {
+    width: 70%;
+    height: 4rem;
+    border-color: white;
+    color: white;
+  }
+  
+  
+  
+  
+  
+  
+
+
+
+  /* .todo-app {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    width: 520px;
+    min-height: 600px;
+    background: #161a2b;
+    text-align: center;
+    margin: 128px auto;
+    border-radius: 10px;
+    padding-bottom: 32px;
+  } */
+  
+  
